--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -8,14 +8,18 @@
     <title>Assignment 2</title>
 </head>
 <body>
-<div>
-    <div class = "bg-img">
-        <img src="/assignment2/images/bg_image.jpg" alt="background image" >
+<div class="img1">
+    <img src="/assignment2/images/bg_image.jpg" alt="">
+</div>
+<div class="img2">
+    <img src="/assignment2/images/cover1.jpg" alt="">
+    <div class="btns">
+        <button type="button">Our Menu</button>
+        <button type="button">Our Menu</button>
+        <button type="button">Our Menu</button>
     </div>
-    <div class = "cover-img">
-    <!-- <img src="/assignment2/images/cover1.jpg" alt="cover"> -->
 </div>
-</div>
+
 </body>
 
 </html>
