--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -14,9 +14,9 @@
 <div class="img2">
     <img src="/assignment2/images/cover1.jpg" alt="">
     <div class="btns">
-        <button type="button">Our Menu</button>
-        <button type="button">Our Menu</button>
-        <button type="button">Our Menu</button>
+        <button type="button" class="button1">Our Menu</button>
+        <button type="button" class="button1">Our Menu</button>
+        <button type="button" class="button1">Our Menu</button>
     </div>
 </div>
 
