some more changes

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -14,9 +14,13 @@
 <div class="img2">
     <img src="/assignment2/images/cover1.jpg" alt="">
     <div class="btns">
-        <button type="button" class="button1">Our Menu</button>
-        <button type="button" class="button1">Our Menu</button>
-        <button type="button" class="button1">Our Menu</button>
+        <button type="button" class="button1">
+           <a href="menu.html"> Menu</a>
+        </button>
+        <button type="button" class="button1"><a href='contact.html'>Contact Us</a></button>
+        <button type="button" class="button1">
+            <a href='aboutus.html'>About Us</a>
+        </button>
     </div>
 </div>
 
