--- a/assignment2/menu.html
+++ b/assignment2/menu.html
@@ -40,7 +40,7 @@
         </p>
     </div>
     <div class="menu-bg">
-        <ul>
+        <ul style="display:flex; justify-content: space-evenly;">
             <li><img class='img-1' src="/assignment2/images/burger.jpg" alt="">
                 <button class='placing-button'type="Button" >Burger</button></li>
           
