--- a/assignment2/aboutus.html
+++ b/assignment2/aboutus.html
@@ -16,7 +16,13 @@
     <div class="sec1">
         <hr>
     <p >
-        Welcome to our restaurant! We are passionate about serving delicious food and providing a memorable dining experience for all of our guests. Our menu features a variety of dishes made with fresh, locally-sourced ingredients and prepared with care by our talented chefs. From appetizers to entrees to desserts, we offer something for every taste and dietary preference. Whether you're dining with friends, family, or on your own, our friendly staff will make you feel welcome and ensure that you have a wonderful time. Come visit us and see why we're one of the best restaurants in town!
+        Introducing a new restaurant that promises to tantalize your taste buds with a delectable range of cuisines. Nestled in the heart of the city, this restaurant boasts an extensive menu featuring an array of flavorful dishes that cater to every palate.
+
+From lip-smacking starters to delicious mains and decadent desserts, every dish is made using the freshest and highest-quality ingredients, promising to take your culinary experience to the next level. Whether you are a vegetarian or a non-vegetarian, there's something for everyone on the menu.
+
+Apart from the delectable food, the restaurant also offers a cozy and inviting ambience, perfect for a romantic dinner, a family gathering or a fun evening with friends. The courteous staff is always on their toes to ensure that you have a memorable dining experience.
+
+Whether you're in the mood for some hearty comfort food, exotic flavors or simply want to try something new, this restaurant is the perfect destination for you. With its delicious food, inviting atmosphere and exceptional service, this restaurant is poised to become a go-to spot for food lovers and socialites alike. So come and indulge in the flavors of this new restaurant, and experience the taste of pure culinary bliss.
     </p>
     <hr>
     <p>
@@ -24,7 +30,15 @@
     </p>
     <hr>
     <p>
-        In addition to our regular menu, we also offer seasonal specials and promotions that highlight the best ingredients of the season. Our chefs work tirelessly to create new and exciting dishes that showcase the freshest and most flavorful produce, meats, and seafood available. We believe in supporting local farmers and producers, and strive to use as many locally-sourced ingredients as possible in our dishes. From the first bite to the last, you'll taste the difference that quality ingredients and expert preparation can make. Come visit us and discover why our restaurant is a favorite among locals and visitors alike!
+        The menu at this restaurant has been carefully curated to offer a diverse range of options, catering to both traditionalists and those seeking more modern fare. The chefs have incorporated local and seasonal ingredients to create unique and flavorful dishes that truly stand out. Guests can enjoy classic comfort foods such as burgers and pizzas, or opt for more adventurous fare like seafood paella or Thai green curry.
+
+The restaurant's interior design is just as impressive as its menu. The decor is a perfect blend of modern and rustic, creating a cozy and warm atmosphere that is perfect for an intimate dinner or a lively get-together with friends. The lighting is soft and inviting, and the seating is comfortable and accommodating.
+
+The restaurant also offers an extensive selection of beverages, including handcrafted cocktails, a variety of wines, and locally brewed beers. And if you're in the mood for something sweet, the dessert menu features decadent treats that are sure to satisfy your sweet tooth.
+
+In addition to offering exceptional food and drink, the restaurant prides itself on providing exceptional customer service. The staff is friendly, knowledgeable, and always willing to go the extra mile to ensure that guests have a memorable experience.
+
+Whether you're in the mood for a romantic dinner, a family celebration, or a night out with friends, this new restaurant is the perfect destination. With its inviting atmosphere, exceptional food and drink, and outstanding service, it's no wonder that it's quickly becoming a popular spot among foodies and socialites alike.
                                                                                                                            
     </p>
 </div>
