--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -7,11 +7,9 @@
     <link rel="stylesheet" href="/assignment2/style.css">
     <title>Assignment 2</title>
 </head>
-<body>
-<div class="img1">
-    <img src="/assignment2/images/bg_image.jpg" alt="">
-</div>
-<div class="img2">
+<body class="banner">
+
+<div class="img2 ">
     <img src="/assignment2/images/cover1.jpg" alt="">
     <div class="btns">
         <button type="button" class="button1">
